force-app/main/default/objects/Loyalty_Point_Transaction__c/Loyalty_Point_Transaction__c.object-meta.xml
<CustomObject>
    <label>Loyalty Point Transaction</label>
    <nameField>
        <displayFormat>LPT-{0000}</displayFormat>
        <label>Transaction No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Point Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>