force-app/main/default/objects/Loyalty_Point_Transaction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Loyalty Point Transactions</relationshipLabel>
    <relationshipName>Loyalty_Point_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>